// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phone > should input phone number 1`] = `
<DocumentFragment>
  <div
    class="join"
  >
    <button
      aria-controls="radix-«r1»"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select country code"
      class="btn min-h-fit h-10 rounded-md join-item justify-between rounded-r-none! px-2"
      data-state="closed"
      role="combobox"
      type="button"
    >
      <img
        alt=""
        class="react-international-phone-flag-emoji"
        data-country="lr"
        draggable="false"
        height="30px"
        loading="lazy"
        src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f1f1-1f1f7.svg"
        style="width: 30px; height: 30px;"
        width="30px"
      />
    </button>
    <input
      class="input rounded-md min-h-fit h-10 input join-item input-bordered w-full rounded-l-none! pl-2! transition-all duration-100"
      inputmode="numeric"
      name="mobile"
      pattern="^\\+\\d{1,4}\\s\\d{6,}$"
      placeholder=" "
      type="text"
      value="+231 9876543210"
    />
  </div>
</DocumentFragment>
`;

exports[`Phone > should render a phone input 1`] = `
<DocumentFragment>
  <div
    class="join"
  >
    <button
      aria-controls="radix-«r0»"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select country code"
      class="btn min-h-fit h-10 rounded-md join-item justify-between rounded-r-none! px-2"
      data-state="closed"
      role="combobox"
      type="button"
    >
      <img
        alt=""
        class="react-international-phone-flag-emoji"
        data-country="lr"
        draggable="false"
        height="30px"
        loading="lazy"
        src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f1f1-1f1f7.svg"
        style="width: 30px; height: 30px;"
        width="30px"
      />
    </button>
    <input
      class="input rounded-md min-h-fit h-10 input join-item input-bordered w-full rounded-l-none! pl-2! transition-all duration-100"
      inputmode="numeric"
      name="mobile"
      pattern="^\\+\\d{1,4}\\s\\d{6,}$"
      placeholder=" "
      type="text"
      value="+231 "
    />
  </div>
</DocumentFragment>
`;

exports[`Phone > should select country code 1`] = `
<DocumentFragment>
  <div
    class="join"
  >
    <button
      aria-controls="radix-«rdq»"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select country code"
      class="btn min-h-fit h-10 rounded-md join-item justify-between rounded-r-none! px-2"
      data-state="closed"
      role="combobox"
      type="button"
    >
      <img
        alt=""
        class="react-international-phone-flag-emoji"
        data-country="af"
        draggable="false"
        height="30px"
        loading="lazy"
        src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f1e6-1f1eb.svg"
        style="width: 30px; height: 30px;"
        width="30px"
      />
    </button>
    <input
      class="input rounded-md min-h-fit h-10 input join-item input-bordered w-full rounded-l-none! pl-2! transition-all duration-100"
      inputmode="numeric"
      name="mobile"
      pattern="^\\+\\d{1,4}\\s\\d{6,}$"
      placeholder=" "
      type="text"
      value="+93 "
    />
  </div>
</DocumentFragment>
`;

exports[`Phone > should select country code by searching country abbreviation 1`] = `
<DocumentFragment>
  <div
    class="join"
  >
    <button
      aria-controls="radix-«r6u»"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select country code"
      class="btn min-h-fit h-10 rounded-md join-item justify-between rounded-r-none! px-2"
      data-state="closed"
      role="combobox"
      type="button"
    >
      <img
        alt=""
        class="react-international-phone-flag-emoji"
        data-country="gb"
        draggable="false"
        height="30px"
        loading="lazy"
        src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f1ec-1f1e7.svg"
        style="width: 30px; height: 30px;"
        width="30px"
      />
    </button>
    <input
      class="input rounded-md min-h-fit h-10 input join-item input-bordered w-full rounded-l-none! pl-2! transition-all duration-100"
      inputmode="numeric"
      name="mobile"
      pattern="^\\+\\d{1,4}\\s\\d{6,}$"
      placeholder=" "
      type="text"
      value="+44 9876 543210"
    />
  </div>
</DocumentFragment>
`;

exports[`Phone > should select country code by searching country name 1`] = `
<DocumentFragment>
  <div
    class="join"
  >
    <button
      aria-controls="radix-«r2»"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select country code"
      class="btn min-h-fit h-10 rounded-md join-item justify-between rounded-r-none! px-2"
      data-state="closed"
      role="combobox"
      type="button"
    >
      <img
        alt=""
        class="react-international-phone-flag-emoji"
        data-country="ng"
        draggable="false"
        height="30px"
        loading="lazy"
        src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f1f3-1f1ec.svg"
        style="width: 30px; height: 30px;"
        width="30px"
      />
    </button>
    <input
      class="input rounded-md min-h-fit h-10 input join-item input-bordered w-full rounded-l-none! pl-2! transition-all duration-100"
      inputmode="numeric"
      name="mobile"
      pattern="^\\+\\d{1,4}\\s\\d{6,}$"
      placeholder=" "
      type="text"
      value="+234 9876543210"
    />
  </div>
</DocumentFragment>
`;
